--- a/Beschreibung.html
+++ b/Beschreibung.html
@@ -5,5 +5,5 @@ Das ist die Beschreibung
 <h2>Unterüberschrift</h2>
 hier kommen weitere Texte
 
-<h2>Anfahrt</h2>
+<h2>Anfahrtsbeschreibung</h2>
 Hier kommt die Anfahrtsbeschreibung
